<resources>
    <string name="app_name">Qurio Game</string>
    <string name="welcome_to_qurio">Welcome to Qurio</string>
    <string name="welcome_to_qurio_description">Welcome to the world of Qurio, where questions spark curiosity and prizes await the smartest. Ready to begin the challenge?</string>
    <string name="swipe_up_to_play">Swipe up to PLAY!</string>
    <string name="choose_your_character">Choose your character</string>
    <string name="choose_your_character_description">Each hero has their own unique style! Choose from unique characters and start your adventure in your own style.</string>
    <string name="challenge_and_win">Challenge and win</string>
    <string name="challenge_and_win_description">Answer quickly, earn points, and share with your friends!\n Each trivia category is a new experience.</string>
    <string name="collect_them_all">Collect them all!</string>
    <string name="collect_them_all_description">Unlock characters, earn badges, and climb the leaderboards. Qurio is merciless, but you can handle it.</string>
    <string name="fake_name">fake name</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="buy">Buy</string>
    <string name="ok">OK</string>
    <string name="age">Age:</string>
    <string name="level_text">Level Text</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="_1">1</string>
    <string name="equal">=</string>
    <string name="life_price">200 X</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="achievement_name">achievement_name</string>
    <string name="click_on_achievement_to_view_details">*Click on achievement to view details</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="achievement_description">You rarely make mistakes! You\'re at a very high level and dominate the game. How to get it: Correctly answer 10 consecutive questions in a single game without making a single mistake.</string>
    <string name="untouchable">Untouchable</string>
    <string name="achievement_description_open">You love experimenting anhd discovering! You\'ve tried several categories and aren\'t limited to just one.\n How to get:\n Play in at least 4 different categories.</string>
    <string name="save_changes">Save changes</string>
    <string name="settings">Settings</string>
    <string name="first_top_gradient_line_top_design_card">first top gradient line top design card</string>
    <string name="second_top_gradient_line_top_design_card">second_top_gradient_line_top_design_card</string>
    <string name="video_games">Video Games</string>
    <string name="_12">12</string>
    <string name="_0">0</string>
    <string name="_56sec">56sec</string>
    <string name="_00_00_2025">00–00–2025</string>
    <string name="last_games">Last Games</string>
    <string name="games">Games</string>
    <string name="header_title">header title</string>
    <string name="welcome_qurio_explorer">Welcome Qurio explorer</string>
    <string name="character_name">character name</string>
    <string name="lives">lives</string>
    <string name="points">Points</string>
    <string name="awards">Awards</string>
    <string name="s">S</string>
    <string name="_0_day_streak_start_make_a_series">0 day streak, start make a series</string>
    <string name="every_day_count">Every day count!</string>
    <string name="fake_question">Which of the following best explains how a country’s physical geography can influence its level of economic development?</string>
    <string name="q_1_12">Q 1/12</string>
    <string name="paris">Paris</string>
    <string name="skip">Skip</string>
    <string name="check">Check</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="try_again">Retry</string>
    <string name="loading_game">Loading Game</string>
    <string name="no_connection">No Connection</string>
    <string name="oops_it_looks_like_you_re_offline_please_check_your_internet_connection_to_continue_playing">Oops! It looks like you’re offline. Please check your internet connection to continue playing</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="skipped">Skipped</string>
    <string name="back_to_home">Back to home</string>
    <string name="reward">reward</string>
    <string name="share_disappointment_with_friends">Share disappointment with friends</string>
    <string name="share_win_with_friends">Share win with friends</string>
    <string name="play_again">Play again</string>
    <string name="buy_life">Buy life</string>
    <string name="achievements">Achievements</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="discard">Discard</string>
    <string name="_60_sec">60 Sec</string>
</resources>