<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#020306"
    tools:context=".ui.character.CharacterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/CutCornerCardView"
            android:layout_width="match_parent"
            android:layout_height="119dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30.dp"
            android:background="@drawable/history_game_item_background"
            app:layout_constraintTop_toTopOf="@id/header_container"
            app:strokeColor="@color/shade_quad"
            app:strokeWidth="1dp">

            <TextView
                android:id="@+id/game_type_text"
                style="@style/body.small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:text="@string/video_games"
                android:textColor="@color/on_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/coins_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/coins"
                app:layout_constraintEnd_toStartOf="@+id/coins_count_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_type_text" />

            <TextView
                android:id="@+id/coins_count_text"
                style="@style/label.medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_12"
                android:textColor="@color/shade_primary"
                app:layout_constraintBottom_toBottomOf="@id/coins_icon"
                app:layout_constraintEnd_toStartOf="@+id/first_mid_line"
                app:layout_constraintStart_toEndOf="@id/coins_icon"
                app:layout_constraintTop_toTopOf="@+id/coins_icon" />

            <View
                android:id="@+id/first_mid_line"
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:background="@drawable/line"
                app:layout_constraintEnd_toStartOf="@+id/second_mid_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/coins_icon"
                app:layout_constraintVertical_chainStyle="spread" />

            <ImageView
                android:id="@+id/star_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/star"
                app:layout_constraintEnd_toStartOf="@+id/star_count_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/first_mid_line"
                app:layout_constraintTop_toBottomOf="@id/game_type_text" />

            <TextView
                android:id="@+id/star_count_text"
                style="@style/label.medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_0"
                android:textColor="@color/shade_primary"
                app:layout_constraintBottom_toBottomOf="@id/star_icon"
                app:layout_constraintEnd_toStartOf="@id/second_mid_line"
                app:layout_constraintStart_toEndOf="@id/star_icon"
                app:layout_constraintTop_toTopOf="@id/star_icon" />

            <View
                android:id="@+id/second_mid_line"
                android:layout_width="1dp"
                android:layout_height="24dp"
                android:background="@drawable/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/first_mid_line"
                app:layout_constraintTop_toTopOf="@id/coins_icon" />

            <ImageView
                android:id="@+id/clock_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/clock"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@id/game_time_text"
                app:layout_constraintStart_toEndOf="@+id/second_mid_line"
                app:layout_constraintTop_toBottomOf="@id/game_type_text"
               />

            <TextView
                android:id="@+id/game_time_text"
                style="@style/label.medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/_56sec"
                android:textColor="@color/shade_primary"
                app:layout_constraintBottom_toBottomOf="@id/clock_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/clock_icon"
                app:layout_constraintTop_toTopOf="@id/clock_icon" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_container"
            style="@style/CutCornerCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="#00FFFFFF"
            android:outlineAmbientShadowColor="#00FFFFFF"
            android:outlineSpotShadowColor="#00FFFFFF"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/middle_guide_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/middle_horizontal_guide_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.44"
                app:layout_constraintStart_toStartOf="parent" />


            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/gradient_line"
                android:contentDescription="@string/first_top_gradient_line_top_design_card"
                android:rotation="180"
                app:layout_constraintEnd_toEndOf="@+id/middle_guide_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/middle_horizontal_guide_line" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/gradient_line"
                android:gravity="end"
                android:contentDescription="@string/second_top_gradient_line_top_design_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/middle_guide_line"
                app:layout_constraintTop_toTopOf="@id/middle_horizontal_guide_line" />

            <TextView
                android:id="@+id/data_text"
                style="@style/title.small"
                android:layout_width="145dp"
                android:layout_height="60dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/dialog_header_background"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:text="@string/_00_00_2025"
                android:textColor="@color/on_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>