<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/surface"
    tools:context=".ui.gameResult.GameResultFragment">

    <View
        android:id="@+id/game_result_layout"
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/tracking_login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/result_answer_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/game_result_layout">

        <com.google.android.material.card.MaterialCardView
            style="@style/CutCornerLevelCard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/surface_high"
            app:strokeColor="@color/shade_quad">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="6dp"
                android:gravity="start|center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/correct"
                    android:textColor="@color/shade_secondary"
                    style="@style/body.small"/>
                <TextView
                    android:id="@+id/correct_answer_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/shade_primary"
                    style="@style/label.medium"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/CutCornerLevelCard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/surface_high"
            app:strokeColor="@color/shade_quad">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="6dp"
                android:gravity="start|center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incorrect"
                    android:textColor="@color/shade_secondary"
                    style="@style/body.small"/>
                <TextView
                    android:id="@+id/incorrect_answer_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_12"
                    android:textColor="@color/shade_primary"
                    style="@style/label.medium"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/CutCornerLevelCard"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/surface_high"
            app:strokeColor="@color/shade_quad">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="6dp"
                android:gravity="start|center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skipped"
                    android:textColor="@color/shade_secondary"
                    style="@style/body.small"/>
                <TextView
                    android:id="@+id/skipped_answer_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/shade_primary"
                    style="@style/label.medium"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <include
        android:id="@+id/share_with_friend_button"
        layout="@layout/primary_button"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/game_result_layout"/>


    <ImageView
        android:id="@+id/result_image"
        android:layout_width="344dp"
        android:layout_height="200dp"
        android:layout_marginBottom="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/win_image"
        app:layout_constraintBottom_toBottomOf="@+id/game_result_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    
   <ImageView
       android:id="@+id/result_text"
       android:layout_width="0dp"
       android:layout_height="24dp"
       android:src="@drawable/win_text"
       app:layout_constraintStart_toStartOf="@id/result_image"
       app:layout_constraintEnd_toEndOf="@id/result_image"
       android:layout_marginBottom="34dp"
       app:layout_constraintBottom_toBottomOf="@id/result_image"
       />
    
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:layout_marginBottom="58dp"
       android:gravity="center"
       app:layout_constraintBottom_toBottomOf="@id/result_image">
       <ImageView
           android:id="@+id/first_star"
           android:layout_width="54dp"
           android:layout_height="54dp"
           android:scaleType="centerCrop"
           android:layout_gravity="bottom"
           android:src="@drawable/gold_star"/>
       <ImageView
           android:id="@+id/mid_star"
           android:layout_width="54dp"
           android:layout_height="54dp"
           android:layout_gravity="top"
           android:src="@drawable/gold_star"/>
       <ImageView
           android:id="@+id/end_star"
           android:layout_width="54dp"
           android:layout_height="54dp"
           android:layout_gravity="bottom"
           android:src="@drawable/gold_star"/>
   </LinearLayout>

    <include
        android:id="@+id/play_agin"
        layout="@layout/primary_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@id/back_to_home" />

    <TextView
        android:id="@+id/back_to_home"
        style="@style/label.medium"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/out_line_button"
        android:gravity="center"
        android:text="@string/back_to_home"
        android:layout_marginBottom="24dp"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reward"
        style="@style/title.small"
        android:textColor="@color/shade_primary"
        app:layout_constraintBottom_toTopOf="@id/coins_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/coins_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/coins"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/result_answer_layout"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/coins_count_text"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/coins_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12"
        android:textColor="@color/shade_primary"
        style="@style/title.medium"
        android:layout_marginStart="3dp"
        app:layout_constraintTop_toTopOf="@id/coins_icon"
        app:layout_constraintBottom_toBottomOf="@id/coins_icon"
        app:layout_constraintStart_toEndOf="@id/coins_icon"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>