<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#020306"
    tools:context=".ui.character.CharacterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/surface_high"
            android:layout_marginTop="30.dp"
            android:layout_marginHorizontal="16dp"
            app:strokeColor="@color/shade_quad"
            app:strokeWidth="1dp"
            style="@style/CutCornerCardView"
            app:layout_constraintTop_toTopOf="@id/header_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="34dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/_1"
                    android:gravity="center"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/heart"
                    app:layout_constraintTop_toTopOf="@id/heart"
                    app:layout_constraintEnd_toStartOf="@id/heart"
                    android:textColor="@color/on_primary"
                    style="@style/headLine.medium"/>

                <ImageView
                    android:id="@+id/heart"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@drawable/heart"
                    android:layout_marginEnd="19dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@id/equal_icon"
                    app:layout_constraintTop_toTopOf="@id/equal_icon"
                    app:layout_constraintEnd_toStartOf="@id/equal_icon" />

                <TextView
                    android:id="@+id/equal_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/middle_items_guide_line"
                    android:text="@string/equal"
                    android:gravity="top"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/on_primary"
                    style="@style/headLine.medium"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    app:layout_constraintStart_toEndOf="@+id/equal_icon"
                    android:text="@string/life_price"
                    android:gravity="center"
                    android:layout_marginStart="19dp"
                    app:layout_constraintTop_toTopOf="@id/equal_icon"
                    app:layout_constraintBottom_toBottomOf="@id/equal_icon"
                    android:textColor="@color/on_primary"
                    style="@style/headLine.medium"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/coins"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@id/price"
                    app:layout_constraintTop_toTopOf="@id/equal_icon"
                    app:layout_constraintBottom_toBottomOf="@id/equal_icon"
                    />
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/middle_items_guide_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5"/>

                <TextView
                    android:id="@+id/cancel_button"
                    style="@style/label.medium"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/out_line_button"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/primary"
                    android:layout_marginEnd="2dp"
                    android:layout_marginTop="28dp"
                    app:layout_constraintTop_toBottomOf="@+id/equal_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/middle_items_guide_line" />

                <include
                    android:id="@+id/buy_button"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    layout="@layout/primary_button"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginStart="2dp"
                    app:layout_constraintEnd_toEndOf="@id/middle_items_guide_line"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:outlineAmbientShadowColor="#00FFFFFF"
            android:outlineSpotShadowColor="#00FFFFFF"
            style="@style/CutCornerCardView"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/middle_guide_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_percent="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/middle_horizontal_guide_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.35"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:id="@+id/exit_button"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:background="@drawable/rectangle"
                    android:gravity="end|top"
                    android:paddingTop="3.5dp"
                    android:paddingHorizontal="3.5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                    <ImageView
                        android:layout_width="7dp"
                        android:layout_height="7dp"
                        android:src="@drawable/x_icon"
                        />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@drawable/gradient_line"
                    android:layout_marginStart="12dp"
                    android:rotation="180"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/middle_guide_line"
                    app:layout_constraintTop_toTopOf="@id/middle_horizontal_guide_line"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="12dp"
                    android:gravity="end"
                    android:background="@drawable/gradient_line"

                    app:layout_constraintStart_toStartOf="@+id/middle_guide_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/middle_horizontal_guide_line"
                    />

                <TextView
                    android:id="@+id/header_title"
                    style="@style/title.small"
                    android:layout_width="156dp"
                    android:layout_height="60dp"
                    android:layout_marginVertical="8dp"
                    android:text="Buy Character"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:background="@drawable/dialog_header_background"
                    android:textColor="@color/on_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>